docs/mechanical/mechanical-scripting-interface/versions/2025.R2.SP00/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/BFCommand.md
# `BFCommand`

<a id="ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.BFCommand"></a>

#### *class* Ansys.ACT.Automation.Mechanical.FE.CDB.BFCommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a BF command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|-------------------------------------------------------|------------------------------------------------------|
| [`Index`](#BFCommand.Index)                           | Gets the command index.                              |
| [`Lab`](#BFCommand.Lab)                               | Gets the label.                                      |
| [`Name`](#BFCommand.Name)                             | Gets the command name.                               |
| [`Node`](#BFCommand.Node)                             | Gets the node number.                                |
| [`ToCdbCommandString`](#BFCommand.ToCdbCommandString) | Gets the command text formatted as a CDB file entry. |
| [`ValCount`](#BFCommand.ValCount)                     | Gets the number of values.                           |
| [`Values`](#BFCommand.Values)                         | Gets the values.                                     |

<a id="property-detail"></a>

## Property detail

<a id="BFCommand.Index"></a>

### *property* BFCommand.Index *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

<a id="BFCommand.Lab"></a>

### *property* BFCommand.Lab *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the label.

<!-- !! processed by numpydoc !! -->

<a id="BFCommand.Name"></a>

### *property* BFCommand.Name *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="BFCommand.Node"></a>

### *property* BFCommand.Node *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the node number.

<!-- !! processed by numpydoc !! -->

<a id="BFCommand.ToCdbCommandString"></a>

### *property* BFCommand.ToCdbCommandString *: Ansys.ACT.Automation.Mechanical.FE.CDB.CdbCommandFormatAndParameter | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command text formatted as a CDB file entry.
Gets the command parameters formatted as a string.

<!-- !! processed by numpydoc !! -->

<a id="BFCommand.ValCount"></a>

### *property* BFCommand.ValCount *: Any | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the number of values.

<!-- !! processed by numpydoc !! -->

<a id="BFCommand.Values"></a>

### *property* BFCommand.Values *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[Any] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the values.

<!-- !! processed by numpydoc !! -->

